# ticketswap

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram.drawio  captcha.html  kramericaindustries.ic.lib.js  main.cpp  ticket.html
adr/: v1.drawio
